implement change detection for update